[gd_scene load_steps=13 format=2]

[ext_resource path="res://assets/GUI/Theme/Themes/caret_right_theme.tres" type="Theme" id=1]
[ext_resource path="res://src/Helpers/GUI/Theme/CustomSelector.gd" type="Script" id=2]
[ext_resource path="res://assets/GUI/Theme/Textures/bgSelector.png" type="Texture" id=3]
[ext_resource path="res://assets/GUI/Theme/Themes/caret_left_theme.tres" type="Theme" id=4]

[sub_resource type="ImageTexture" id=9]

[sub_resource type="StyleBoxEmpty" id=10]

[sub_resource type="StyleBoxEmpty" id=11]

[sub_resource type="StyleBoxEmpty" id=12]

[sub_resource type="StyleBoxEmpty" id=13]

[sub_resource type="StyleBoxEmpty" id=14]

[sub_resource type="StyleBoxTexture" id=7]
content_margin_left = 1.0
content_margin_right = 1.0
content_margin_top = 4.0
content_margin_bottom = 1.0
texture = ExtResource( 3 )
region_rect = Rect2( 0, 0, 348, 59 )
expand_margin_left = 2.0
expand_margin_right = 2.0

[sub_resource type="Theme" id=8]
Label/styles/normal = SubResource( 7 )

[node name="CustomSelector" type="OptionButton"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -824.0
margin_bottom = -556.0
custom_colors/font_color_disabled = Color( 0, 0, 0, 0 )
custom_colors/font_color_focus = Color( 0, 0, 0, 0 )
custom_colors/font_color = Color( 0, 0, 0, 0 )
custom_colors/font_color_hover = Color( 0, 0, 0, 0 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 0 )
custom_icons/arrow = SubResource( 9 )
custom_styles/hover = SubResource( 10 )
custom_styles/pressed = SubResource( 11 )
custom_styles/focus = SubResource( 12 )
custom_styles/disabled = SubResource( 13 )
custom_styles/normal = SubResource( 14 )
disabled = true
text = "Item 0"
items = [ "Item 0", null, false, 0, null, "Item 1", null, false, 1, null ]
selected = 0
script = ExtResource( 2 )

[node name="GridContainer" type="GridContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 3

[node name="Previous" type="Button" parent="GridContainer"]
margin_top = 2.0
margin_right = 16.0
margin_bottom = 18.0
rect_min_size = Vector2( 16, 16 )
focus_mode = 0
size_flags_horizontal = 4
size_flags_vertical = 6
theme = ExtResource( 4 )
enabled_focus_mode = 0
align = 0

[node name="Item" type="Label" parent="GridContainer"]
margin_left = 20.0
margin_right = 180.0
margin_bottom = 20.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = SubResource( 8 )
text = "SELECTED ITEM"
align = 1
clip_text = true

[node name="Next" type="Button" parent="GridContainer"]
margin_left = 184.0
margin_top = 2.0
margin_right = 200.0
margin_bottom = 18.0
rect_min_size = Vector2( 16, 16 )
focus_mode = 0
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource( 1 )
enabled_focus_mode = 0
align = 2

[connection signal="pressed" from="GridContainer/Previous" to="." method="_on_Previous_pressed"]
[connection signal="pressed" from="GridContainer/Next" to="." method="_on_Next_pressed"]
